2006-02-08  Maciej Stachowiak  <mjs@apple.com>

        Add missing file from earlier added svg test.

        * svg/custom/resources/link-target.html: Added.

2006-02-08  Boris Daljevic  <boris@backbase.com>

        Reviewed and tweaked by Darin.

        - test for http://bugzilla.opendarwin.org/show_bug.cgi?id=6648
          Safari strips namespace prefix when using setAttribute(), but should treat it as part of name

        * fast/dom/Element: Added.
        * fast/dom/Element/setAttribute-with-colon.html: Added.
        * fast/dom/Element/setAttribute-with-colon-expected.txt: Added.

2006-02-08  Mitz Pettel  <opendarwin.org@mitzpettel.com>

        Reviewed by Hyatt.

        - test for http://bugzilla.opendarwin.org/show_bug.cgi?id=7095
          Removing positioning from an element does not relayout properly

        * fast/block/positioning/relayout-on-position-change-expected.checksum: Added.
        * fast/block/positioning/relayout-on-position-change-expected.png: Added.
        * fast/block/positioning/relayout-on-position-change-expected.txt: Added.
        * fast/block/positioning/relayout-on-position-change.html: Added.

2006-02-08  Maciej Stachowiak  <mjs@apple.com>

        - added SVG path hit testing test

        * svg/custom/hit-test-path-expected.checksum: Added.
        * svg/custom/hit-test-path-expected.png: Added.
        * svg/custom/hit-test-path-expected.txt: Added.
        * svg/custom/hit-test-path.svg: Added.

2006-02-08  Adele Peterson  <adele@apple.com>

        Reviewed by Maciej.

        - test for
        <rdar://problem/4325160> REGRESSION(416.12-420+): window events not stopped by stopPropagation (affects macnn forums)

        * fast/events/window-events-bubble-expected.txt: Added.
        * fast/events/window-events-bubble.html: Added.
        * fast/events/window-events-bubble2-expected.txt: Added.
        * fast/events/window-events-bubble2.html: Added.
        * fast/events/window-events-capture-expected.txt: Added.