@@ -1,0 +1,21 @@
+layer at (0,0) size 800x600
+  RenderCanvas at (0,0) size 800x600
+layer at (0,0) size 800x600
+  RenderBlock {HTML} at (0,0) size 800x600
+    RenderBody {BODY} at (8,8) size 784x584
+      RenderTable {DIV} at (0,0) size 309x58
+        RenderTableSection at (0,0) size 0x58
+          RenderTableRow at (0,0) size 0x0
+            RenderTableCell at (0,0) size 309x58 [r=0 c=0 rs=1 cs=1]
+              RenderBlock (anonymous) at (0,0) size 309x0
+                RenderInline {FORM} at (0,0) size 0x0
+                  RenderText {TEXT} at (0,0) size 0x0
+              RenderBlock (anonymous) at (0,0) size 309x22
+                RenderBlock {H3} at (0,0) size 309x22
+                  RenderText {TEXT} at (0,0) size 309x22
+                    text run at (0,0) width 309: "There should be a fourth dot bellow..."
+              RenderBlock (anonymous) at (0,40) size 309x18
+                RenderInline {FORM} at (0,0) size 0x0
+                RenderInline (generated) at (0,0) size 4x18
+                  RenderText at (0,0) size 4x18
+                    text run at (0,0) width 4: "."
