@@ -1,0 +1,18 @@
+<head>
+        <style>
+            form {display: inline}
+            .clear:after {content: "."}
+            .clear {display:table}
+        </style>
+</head>
+
+<body>
+    
+    <div class="clear">
+        <form>
+            <h3>There should be a fourth dot bellow...</h3>
+        </form>
+    </div>
+
+</body>
+</html>
