@@ -1,3 +1,15 @@
+2006-02-10  Beth Dakin  <bdakin@apple.com>
+
+        Reviewed by Hyatt
+
+        Layout test for <rdar://problem/4149655> Frequently reported crash, 
+        repro at lastminute.se in khtml::RenderBlock::createLineBoxes
+
+        * fast/css-generated-content/015-expected.checksum: Added.
+        * fast/css-generated-content/015-expected.png: Added.
+        * fast/css-generated-content/015-expected.txt: Added.
+        * fast/css-generated-content/015.html: Added.
+
 2006-02-08  Maciej Stachowiak  <mjs@apple.com>
 
         Add missing file from earlier added svg test.
